# tap-trello

./: .gitignore  LICENSE  README.md  config.example.json  meltano.yml  pyproject.toml  tox.ini
.github/workflows/: test.yml
tap_trello/: __init__.py  __main__.py  auth.py  client.py  streams.py  tap.py
tap_trello/schemas/: __init__.py  actions.json  actions.py  boards.json  boards.py  cards.json  cards.py  checklists.json  checklists.py  lists.json  users.json
tap_trello/schemas/utils/: __init__.py  custom_object.py
tap_trello/tests/: __init__.py  test_base_credentials.py  test_core.py  utils.py
tests/: test_core.py
