[tool.poetry]
name = "tap-trello"
version = "0.8.0"
description = "`tap-trello` is a Singer tap for Trello, built with the Meltano SDK for Singer Taps."
authors = ["Daniel Walker"]
keywords = [
    "ELT",
    "trello",
]
license = "AGPL-3.0"

[tool.poetry.dependencies]
python = "^3.9"
singer-sdk = "^0.44.3"

[tool.poetry.dev-dependencies]
pytest = "^8.3.5"

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true

[tool.ruff]
src = ["tap_trello"]
target-version = "py39"

[tool.ruff.lint]
ignore = [
    "ANN001",  # missing-type-function-argument
    "ANN201",  # missing-return-type-undocumented-public-function
    "COM812",  # missing-trailing-comma
    "ISC001",  # single-line-implicit-string-concatenation
]
select = ["ALL"]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.lint.isort]
known-first-party = ["tap_trello"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
tap-trello = 'tap_trello.tap:TapTrello.cli'
